<resources>
    <string name="app_name">中国移动</string>
    <string name="detail_title">详单查询</string>
    <string name="detail_back">‹</string>
    <string name="detail_more">•••</string>
    <string name="detail_query_account">查账单 ></string>
    <string name="tab_package">套餐及固定费用详单</string>
    <string name="tab_call_detail">通话详单</string>
    <string name="tab_sms_detail">短/彩信详单</string>
    <string name="tab_data_detail">上网详单</string>
    <string name="tab_vas_deduction_record">增值业务扣费记录</string>
    <string name="filter_call_out">按号码</string>
    <string name="filter_search_hint">请输入手机号查询</string>
    <string name="filter_search">查询</string>
    <string name="filter_fee">费用</string>
    <string name="filter_main_called">主/被叫</string>
    <string name="filter_location">通信地点</string>
    <string name="filter_type">通信类型</string>
    <string name="filter_fee_dropdown">费用 ˅</string>
    <string name="filter_main_called_dropdown">主/被叫 ˅</string>
    <string name="filter_location_dropdown">通信地点 ˅</string>
    <string name="filter_type_dropdown">通信类型 ˅</string>
    <string name="filter_contact_name">以本机通讯录名称显示</string>
    <string name="empty_call_records">暂无通话记录</string>
    <string name="record_type_label">通信类型:</string>
    <string name="record_bill_seconds_label">计费分钟数:</string>
    <string name="record_fee_label">通话费:</string>
    <string name="record_connected">已接通</string>
    <string name="record_missed">未接通</string>
    <string name="record_voice_hd">高清语音</string>
    <string name="record_voice_hd_incoming">高清语音被叫</string>
    <string name="record_voice_hd_outgoing">高清语音主叫</string>
    <string name="record_package_default">5G智享套餐 - 语音产品</string>
    <string name="record_type_incoming_domestic">国内被叫</string>
    <string name="record_type_outgoing_local">本地主叫本地</string>
    <string name="record_unknown_location">未知归属地</string>
    <string name="record_fee_free">¥0.00</string>
    <string name="summary_subtitle_default">全球通金卡</string>
    <string name="summary_name_default">孟*</string>
    <string name="summary_hint_default">近期开通详单查询，以下为最近通话记录</string>
    <string name="record_count_format">共%1$d条</string>
    <string name="month_04">4月&#10;2026</string>
    <string name="month_03">3月&#10;2026</string>
    <string name="month_02">2月&#10;2026</string>
    <string name="month_01">1月&#10;2026</string>
    <string name="month_12">12月&#10;2025</string>
    <string name="month_11">11月&#10;2025</string>
    <string name="month_10">10月&#10;2025</string>
    <string name="settings_title">设置</string>
    <string name="settings_save">保存</string>
    <string name="settings_saved">设置已保存</string>
    <string name="settings_outgoing_package_title">主叫使用套餐信息</string>
    <string name="settings_outgoing_package_hint">只在主叫详单中展示，被叫详单不显示此信息。</string>
    <string name="settings_outgoing_package_placeholder">例如：移动全家享套餐</string>
    <string name="settings_custom_name_placeholder">请输入顶部展示姓名（如：孟*）</string>
    <string name="settings_custom_region_placeholder">请输入本机号码地区（如：徐州）</string>
    <string name="settings_custom_call_type_outgoing_placeholder">请输入主叫通话类型（如：本地主叫本地）</string>
    <string name="settings_custom_call_type_incoming_placeholder">请输入被叫通话类型（如：国内被叫）</string>
    <string name="call_analysis">通话分析</string>
    <string name="call_analysis_tip">通话分析功能开发中</string>
    <string name="load_complete">数据加载完毕</string>
    <string name="module_placeholder_not_supported">当前模块内容开发中</string>
    <string name="module_placeholder_with_name">%1$s模块内容开发中</string>
    <string name="home_tab_home">首页</string>
    <string name="home_tab_video">视频</string>
    <string name="home_tab_equity">爱购</string>
    <string name="home_tab_mine">我的</string>
    <string name="home_ai_entry">AI入口</string>
    <string name="home_ai_entry_tip">AI入口开发中</string>
    <string name="home_mine_desc">这里先放“我的”页面入口，查询详单保持在独立页面。</string>
    <string name="home_open_detail">进入查询详单</string>
    <string name="home_open_detail_short">查详单</string>
    <string name="home_care_mode">↔ 关怀版</string>
    <string name="home_action_settings">设置</string>
    <string name="home_action_hotline">10086</string>
    <string name="home_action_message">消息</string>
    <string name="home_phone_default">135****7053</string>
    <string name="home_region_default">四川</string>
    <string name="home_swap_icon">↔</string>
    <string name="home_sign_in_center">领</string>
    <string name="home_sign_in_title">签到</string>
    <string name="home_sign_in_subtitle">领话费</string>
    <string name="home_stat_coupon">卡券</string>
    <string name="home_stat_data">通用流量剩余</string>
    <string name="home_stat_balance">话费余额</string>
    <string name="home_stat_ai_bean">AI豆</string>
    <string name="home_equity_title">我的权益</string>
    <string name="home_equity_upgrade">升级铂金享5大特权 ></string>
    <string name="home_equity_desc">海量权益月月领，查看我的专属福利</string>
    <string name="home_equity_action">去查看</string>
    <string name="home_promo_icon_week">7</string>
    <string name="home_promo_icon_day">7天</string>
    <string name="home_promo_icon_emergency">急</string>
    <string name="home_promo_icon_card">宝</string>
    <string name="home_promo_week_pack">5GB周包</string>
    <string name="home_promo_day_pack">7天补给包</string>
    <string name="home_promo_emergency_pack">应急流量包</string>
    <string name="home_promo_card_pack">花卡宝藏版39</string>
    <string name="home_service_title">我的服务</string>
    <string name="home_service_hall">服务大厅 ></string>
    <string name="home_service_icon_left">余</string>
    <string name="home_service_icon_order">订</string>
    <string name="home_service_icon_bill">账</string>
    <string name="home_service_icon_pay">充</string>
    <string name="home_service_icon_package">套</string>
    <string name="home_service_icon_detail">详</string>
    <string name="home_service_icon_complaint">诉</string>
    <string name="home_service_icon_invoice">票</string>
    <string name="home_service_query_left">余量查询</string>
    <string name="home_service_ordered">已订业务</string>
    <string name="home_service_bill">账单查询</string>
    <string name="home_service_pay">充值交费</string>
    <string name="home_service_package">我的套餐</string>
    <string name="home_service_detail">详单查询</string>
    <string name="home_service_complaint">我的投诉</string>
    <string name="home_service_invoice">电子发票</string>
    <string name="home_service_rights">权益中心</string>
    <string name="home_service_online">在线客服</string>
    <string name="home_device_title">我的设备</string>
    <string name="home_device_more">查看更多 ›</string>
    <string name="home_device_badge_gt">GT</string>
    <string name="home_device_badge_trade">618</string>
    <string name="home_device_badge_phone">16</string>
    <string name="home_device_name_gt">真我GT8 Pro</string>
    <string name="home_device_select_hint">点击选择本地设备图片</string>
    <string name="home_device_select_toast">请选择本地设备图片</string>
    <string name="home_device_price_trade">¥0.00起</string>
    <string name="home_device_price_phone_a">¥8749起</string>
    <string name="home_device_price_phone_b">¥7679起</string>
    <string name="warm_tip_template">温馨提示：\n1、以上信息是移动用户%1$s截至页面打开时间%2$s的查询结果。\n2、除特别说明，以上“国内”指中国大陆，不含港澳台地区。\n3、更多信息可详询10086。若您的诉求在10086未得理，可以致电10080客户服务监督热线反映。</string>
    <string name="mine_stats_settings_title">我的数据设置</string>
    <string name="mine_stats_settings_desc">自定义“我的”页面顶部展示的卡券、流量、余额与AI豆数值，设置后将持久化保存。</string>
    <string name="mine_stats_coupon_hint">请输入卡券数量</string>
    <string name="mine_stats_data_hint">请输入通用流量数值（如 42.92）</string>
    <string name="mine_stats_balance_hint">请输入话费余额（如 724.48）</string>
    <string name="mine_stats_bean_hint">请输入AI豆数量</string>
    <string name="update_dialog_title">发现新版本</string>
    <string name="update_dialog_title_force">发现重要更新</string>
    <string name="update_dialog_version_label">最新版本：%1$s</string>
    <string name="update_dialog_log_label">更新内容：</string>
    <string name="update_dialog_confirm">立即更新</string>
    <string name="update_dialog_cancel">暂不更新</string>
    <string name="update_downloading_title">正在下载更新</string>
    <string name="update_downloading_message">请稍候，正在准备安装包…</string>
    <string name="update_downloading_progress">正在下载更新：%1$d%%</string>
    <string name="update_download_failed">下载升级包失败：%1$s</string>
    <string name="update_install_permission_title">需要安装权限</string>
    <string name="update_install_permission_message">请先允许当前应用安装未知来源应用，授权后会继续安装升级包。</string>
    <string name="update_install_permission_confirm">去授权</string>
    <string name="update_install_permission_denied">未获得安装权限，暂时无法升级</string>
    <string name="web_home_stats_settings_title">首页 WebView 数据设置</string>
    <string name="web_home_stats_settings_desc">用于覆盖 10086 首页码表里的通话剩余、积分、待领取权益数值。流量与余额复用“我的数据设置”，保存后重新进入首页会自动生效。</string>
    <string name="web_home_stat_data_title">通用流量剩余</string>
    <string name="web_home_stat_data_hint">请输入流量数值，例如 19.19</string>
    <string name="web_home_stat_balance_title">话费余额</string>
    <string name="web_home_stat_balance_hint">请输入余额数值，例如 547.58</string>
    <string name="web_home_stat_call_title">通用通话剩余</string>
    <string name="web_home_stat_call_hint">请输入分钟数，例如 200</string>
    <string name="web_home_stat_points_title">积分</string>
    <string name="web_home_stat_points_hint">请输入积分数，例如 1929</string>
    <string name="web_home_stat_rights_title">待领取权益</string>
    <string name="web_home_stat_rights_hint">请输入权益数量，例如 0</string>
    <string name="home_hero_title">10GB牛双倍视频版月卡</string>
    <string name="home_hero_subtitle">10GB牛双倍视频版月卡</string>
    <string name="home_hero_price">仅需14.9元</string>
    <string name="home_hero_action">立即开抢</string>
    <string name="home_stat_data_rest">通用流量剩余</string>
    <string name="home_stat_balance_rest">话费余额</string>
    <string name="home_stat_call_rest">通用通话剩余</string>
    <string name="home_stat_point_rest">待领取权益</string>
    <string name="home_notice_tag_headline">头条</string>
    <string name="home_notice_tag_news">公告</string>
    <string name="home_notice_text">中国移动在售资费公示</string>
    <string name="home_shortcut_rights">权益优选</string>
    <string name="home_shortcut_gift">领回馈礼</string>
    <string name="home_shortcut_plan">套餐专区</string>
    <string name="home_shortcut_family">爱家专区</string>
    <string name="home_shortcut_market">流量超市</string>
    <string name="home_shortcut_data5g">10元5GB</string>
    <string name="home_shortcut_free_stream">免流直播</string>
    <string name="home_shortcut_number">选号专区</string>
    <string name="home_shortcut_tariff">资费专区</string>
    <string name="home_shortcut_anti_fraud">防诈骗会员</string>
    <string name="home_promo_tag_5g">5G一网任包</string>
    <string name="home_promo_multistage_title">多档任选</string>
    <string name="home_promo_multistage_subtitle">5G一网任包</string>
    <string name="home_promo_tag_local">本地专惠</string>
    <string name="home_promo_local_title">本地特惠</string>
    <string name="home_promo_local_subtitle">福利多多</string>
    <string name="home_promo_tag_deal">限时热销</string>
    <string name="home_promo_deal_title">10元5GB</string>
    <string name="home_promo_deal_subtitle">超值特惠</string>
    <string name="home_promo_tag_live">精彩直播</string>
    <string name="home_promo_live_title">免流直播</string>
    <string name="home_promo_live_subtitle">精彩随看</string>
    <string name="home_promo_banner_title">流量7天包</string>
    <string name="home_promo_banner_subtitle">10元5G通用流量 7天可用月</string>
    <string name="home_section_more">更多 ></string>
    <string name="home_section_hot">热门活动</string>
    <string name="home_section_traffic_market">流量超市</string>
    <string name="home_section_rights">权益专区</string>
    <string name="home_section_card">号卡专区</string>
    <string name="home_section_package">套餐专区</string>
    <string name="home_section_family">爱家专区</string>
    <string name="home_section_digital">数字娱乐</string>
    <string name="home_section_roaming">国际漫游</string>
    <string name="home_hot_banner_title">10GB流量周包</string>
    <string name="home_hot_banner_subtitle">双份视频会员</string>
</resources>